chore(ci): upgrade eslint/prettier, fix oxlint

--- a/plugins/personality/tsconfig.json
+++ b/plugins/personality/tsconfig.json
@@ -4,5 +4,9 @@
     "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": [".botpress/**/*", "src/**/*", "plugin.definition.ts"]
+  "include": [
+    ".phasm/**/*",
+    "src/**/**/*",
+    "plugin.definition.ts"
+  ]
 }
